<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cc.allio</groupId>
        <artifactId>uno</artifactId>
        <version>1.1.9-jdk8</version>
    </parent>

    <artifactId>uno-websocket</artifactId>
    <description>提供封装的websocket，包含鉴权、心跳、连接管理、实现方只需要关注消息的处理</description>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
        <dependency>
            <groupId>cc.allio</groupId>
            <artifactId>uno-core</artifactId>
        </dependency>
        <dependency>
            <groupId>cc.allio</groupId>
            <artifactId>uno-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
